# challenges-for-unsupervised-elicitation

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
datasets/: test_gsm8k.json  test_larger_than.json  test_political_normative.json  train_larger_than.json  train_political_normative.json
experiments/: experiment_utils.py  probing_sweep.py  prompting_sweep.py
scripts/: download_datasets.py  get_activations.py  run_probing.py  run_prompting.py  standalone_gsm8k_test.py  test_logprobs.py
src/: activations.py  config.py  data.py  logging_utils.py  metrics.py  probing.py  prompting.py  storage_utils.py  utils.py  vllm_inference.py
tests/: conftest.py  test_config.py  test_data.py  test_metrics.py  test_probing.py  test_prompting.py
